# GrantProof-Stellar

./: .gitignore  Cargo.toml  README.md
frontend/: .env.example  package-lock.json
frontend/src/: App.css  App.tsx  index.css  soroban.ts
frontend/src/bindings/: README.md
frontend/src/bindings/src/: index.ts
src/: lib.rs  test.rs
test_snapshots/test/tests/: test_duplicate_proof_is_rejected.1.json  test_storage_state_after_submit_and_audit.1.json  test_submit_audit_and_release_succeeds.1.json
