[package]
name        = "grant_proof"
version     = "0.1.0"
edition     = "2021"
description = "Verifiable on-chain proof of NGO fund usage with donor-triggered tranche release on Stellar"
authors     = ["GrantProof Team"]
license     = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
opt-level        = "z"
overflow-checks  = true
debug            = false
strip            = "symbols"
debug-assertions = false
panic            = "abort"
codegen-units    = 1
lto              = true